prevent white space break in on logged in username

--- a/goobi-viewer-core/WebContent/resources/css/less/viewer/components/loginNavigation.less
+++ b/goobi-viewer-core/WebContent/resources/css/less/viewer/components/loginNavigation.less
@@ -36,6 +36,11 @@
 			height: 32px;
 		}
 	}
+	&__user-name {
+		text-overflow: ellipsis;
+		overflow: hidden;
+		white-space: nowrap;
+	}
 	&__user-icon {
 		/* MODIFICATION */
 		&--loggedout {
